

HEAD
====


libHX 3.2 (October 11 2009)
===========================
Enhancements:
- opt: add HXTYPE_MCSTR for storing into hxmc_t *s
- string: add HX_strquote


libHX 3.1 (September 13 2009)
=============================
Enhancements:
- added HXbitmap_* functions
Fixes:
- mc: HXmc_strcpy produced a zero-length string when NULL was copied


libHX 3.0.1 (August 31 2009)
============================
Fixes:
- map: avoid underflow in value-based tree comparison


libHX 3.0 (August 27 2009)
==========================
Changes:
- automatically skip building testcases if C++ compiler not available
  (reminder: libHX itself does not require a C++ compiler)
- arbtree: HXbtree was removed in favor of the new HXmap
- clist: clist.h moved into list.h
- format: HXformat_* now uses struct HXformat_map,
  so that it does not tie itself to HXbtree
- mc: fix an alignment-induced overallocation
- rand: use faster modulo-based variant for numbers within RAND_MAX range
- rand: use libc rand() almost exclusively, only use /dev/urandom for seed
Enhancements:
- defs: add HXsizeof_member and HXtypeof_member
- map: new map API, with hash-based maps and classic rbtree-based maps
- time: add time delta functions (HX_diff_timeval/HX_diff_timespec)
Fixes:
- format: memory leaks fixes in HXformat


libHX 2.9 (July 11 2009)
========================
Fixes:
- string: fixed number of fields and trailing NULL in HX_split4
Enhancements:
- string: add HX_basename_exact


libHX 2.8 (July 01 2009)
========================
Enhancements:
- HXproc now knows about HXPROC_NULL_*, which can be used to discard I/O
- HXproc: expressly prohibit HXPROC_STD* for HXproc_run_sync


libHX 2.7 (April 08 2009)
=========================
Fixes:
- install missing wx_helper.hpp


libHX 2.6 (March 28 2009)
=========================
Documentation:
- install documentation
- update project URLs
- add section about Miscellaneous functions
Changes:
- arbtree: add "flat view" operation
- misc: added HX_fls