@@ -2,6 +2,7 @@
 
 HEAD
 ====
+- shconfig: add HX_shconfig_map to return all entries of a shconfig file
 
 
 libHX 3.2 (October 11 2009)
